# Pageloader

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  dom.py  downloading.py  errors.py  io.py  logging.py  naming.py  resources.py  saving.py  storage.py  url.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_converting.py  test_dom.py  test_downloading.py  test_io.py  test_naming.py  test_resources.py  test_storage.py  test_url.py
tests/fixtures/: modified_test_page.html  test_page.html  with_local_resources.html  without_local_resources.html
