[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "PageLoader is a command line utility that downloads pages from the Internet and stores them on your computer."
authors = ["Oleg Gahverdiev <olegik94b@gmail.com>"]
repository = "https://github.com/oleglego94/python-project-lvl3"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
black = "^20.8b1"
requests-mock = "^1.8.0"
isort = "^5.7.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
